@@ -97,6 +97,9 @@ Release 2.4.1 - 2014-06-23
 
     HDFS-6527. Edit log corruption due to defered INode removal. (kihwal and
     jing9 via jing9)
+    
+    HDFS-7232. Populate hostname in httpfs audit log (Zoran Dimitrijevic 
+    via aw)
 
 Release 2.4.0 - 2014-04-07 
 
